this is the second commit

--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,9 @@
     display: flex;
     justify-content:space-between;
     align-items:center;
-
+    width:100vw;
     padding-top:1rem;
+    margin-right: 50px;
 }
 
 .logo{
@@ -36,6 +37,7 @@
 
 .logo-container{
     display:flex;
+    flex-direction: row;
     justify-content: baseline;
     align-items: center;
 }
@@ -47,8 +49,15 @@
 
 .nav-items{
     display:flex;
-    gap:2rem;
+    justify-content: center;
+    gap:20px;
     padding: 0 4em;
+    width:35%;
+
+}
+
+#cross-button{
+  display: none;
 }
 
 .nav-items div{
@@ -59,7 +68,7 @@
 }
 .nav-items div a{
     color:black;
-    /* transition: all 5s ease; */
+    transition: all 1s ease;
 }
 
 a{
@@ -67,9 +76,10 @@ a{
 }
 
 
-.nav-items div:hover{
-    transition:0.8s;
+.nav-items div a:hover{
+    
     font-weight: bold;
+    color: #e84949;
 }
 
 .hero-section{
@@ -87,17 +97,19 @@ a{
 .faded-text{
     position:absolute;
     user-select:none;
-    font-size: 7em;
+    font-size: 6em;
     color:rgb(231,231,231);
-    
-    bottom: -16%;
-    left: -5%;
+    width:100%;
+    bottom: -15%;
+    left: 20px;
     font-weight: bold;
     transition: all 3s;
+    height: auto;
+    
 }
 
 .hero-section-left{
-    /* width:100%; */
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -174,6 +186,7 @@ a{
     filter:grayscale(1);
     transition:all 1s;
     animation: scaleImage 5s linear infinite;
+    
   }
 
   .user-image img{
@@ -316,7 +329,7 @@ a{
     height:550px;
     background-image: url(./images/projects/Project1.png);
     background-size: cover;
-    /* background-repeat: no-repeat; */
+   
     position:relative;
     box-shadow:0px 0px 40px #1f1f1f;
   }
@@ -350,7 +363,7 @@ a{
   .project-card:hover::before{
     transform:scaleX(1);
   }
-
+ 
   .project-number{
     position:absolute;
     font-size:200px;
@@ -463,7 +476,31 @@ a{
     background-image: url(./images/projects/Project4.png);
   }
 
-  @media (max-width:1300px) {
+  @media (max-width:1220px) {
+    .logo-container{
+      transform: scale(0.8);
+    }
+    
+    .hero-section{
+      
+      width:100vw;
+    
+      margin: 2rem 0;
+      padding: 0 2rem;
+      padding-bottom: 8rem;
+      
+  }
+
+    .hero-section-left{
+      transform: scale(0.8);
+      width: 80%;
+    }
+
+    .hero-section-right{
+      transform: scale(0.8);
+      margin-right:10%;
+    }
+    
     .page-header {
       padding-top: 30px;
       color: var(--bgOrange);
@@ -709,4 +746,123 @@ footer{
 .icon-wrapper{
   display:flex;
   gap:1rem;
+}
+
+@media screen and (max-width:903px){
+
+  .nav-items{
+    transform: scale(0.85);
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  #cross-button{
+   display: inline;
+  }
+
+  .hero-section{
+    flex-direction: column-reverse;
+    
+  }
+
+  .hero-section-left{
+    align-items: center;
+    margin-right: 10%;
+  }
+
+  .hero-section-description{
+    text-align: center;
+  }
+  
+  .hero-section-sub-heading{
+    text-align: center;
+  }
+
+  .faded-text{
+    left:-30px;
+   transform: scale(0.8);
+    bottom: -7%;
+  }
+
+
+}
+
+@media screen and (max-width:533px){
+  .logo{
+    transform: scale(1.2);
+  }
+  .logo-text{
+    display: none;
+  }
+  .logo-container{
+    display: flex;
+    justify-content: center;
+    width:20%;
+    margin-top: 0;
+  }
+  .nav-items{
+    align-items: flex-end;
+    padding: 0 2em;
+  }
+
+  .hero-section-right{
+    margin-right: 15%;
+  }
+
+  .hero-section-left{
+    margin-right: 15%;
+  }
+  
+  .faded-text{
+    font-size:50px;
+   
+  }
+  .page-header{
+    font-size: x-large;
+  }
+
+  
+
+}
+
+@media screen and (max-width:440px){
+  .logo{
+    margin-left: 20px;;
+  }
+  .faded-text{
+    width:100%;
+    font-size:50px;
+    bottom: -7%;
+  }
+
+  #project1 .project-content{
+    transform: scale(0.8);
+  }
+
+}
+@media screen and (max-width:372px){
+  
+
+  .project-content .btn-grp{
+    
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  #project1 .project-content{
+  margin-bottom: 70px;
+  }
+
+}
+@media screen and (max-width:326px){
+  .nav-items div a{
+    font-size: small;
+  }
+  #cross-button{
+    transform: scale(0.7);
+  }
+  #project1 .project-content{
+    margin-bottom: 120px;
+    }
 }
